package hva.core.enumerator;

public enum Influence {
    POS,
    NEU,
    NEG
}
