package hva.core.enumerator;

public enum LeafState {
    WITHLEAVES,
    WITHOUTLEAVES,
    FALLINGLEAVES,
    GENERATELEAVES
}
