package hva.core.enumerator;

public enum VaccineDamage {
    NORMAL,
    CONFUSION,
    ACCIDENT,
    ERROR
}
